--- a/cepvalidator/src/App.css
+++ b/cepvalidator/src/App.css
@@ -36,3 +36,48 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* parte do formulário */
+
+
+.address-form {
+  border: 1px solid #2f3542;
+  padding: 0 1em;
+  min-width: 280px;
+  border-radius: 20px;
+}
+
+.address-form div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  box-sizing: border-box;
+}
+
+.address-form div label {
+  display: block;
+  margin-bottom: 0.3em;
+  width: 100%;
+  text-align: left;
+}
+.address-form div input {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  padding: 15px 20px;
+  border: none;
+  border-radius: 15px;
+  background-color: #262a33;
+  color: azure;
+  font-size: 14px;
+  box-shadow: 1px 1px 5px rgba(24, 24, 24, 0.65);
+  transition: box-shadow 0.2s ease-in;
+}
+
+.address-form div input:focus {
+  caret-color: aliceblue;
+  outline: 1px solid #3b4768;
+  box-shadow: 4px 4px 10px rgba(24, 24, 24, 0.65);
+}
