--- a/cepvalidator/src/components/MainButton/mainbutton.css
+++ b/cepvalidator/src/components/MainButton/mainbutton.css
@@ -1,16 +1,18 @@
 .main-button {
-    background-color: rgb(13, 93, 117);
+    background: linear-gradient(to right, #29447c, #2c57ac);
     border: none;
     color: #fff;
-    padding: 25px;
+    padding: 15px;
     border-radius: 20px;
-    font-size: 22px;
+    font-size: 18px;
     cursor: pointer;
     box-sizing: border-box;
+    width: 100%;
+    margin: 1em 0;
 }
 
 
 .main-button:hover {
-    background-color: rgb(21, 127, 160);
-    box-shadow: 2px 2px 5px rgba(21, 127, 160, 0.25);
+    background-color: #2c57ac;
+    box-shadow: 2px 2px 5px rgba(59, 43, 114, 0.25);
 }
